# wereadmaster

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.website.config.ts
.cargo/: config.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/permissions/autogenerated/: ask_local_reader_selection_question.toml  ask_reading_assistant.toml  ask_reading_assistant_stream.toml  cancel_bulk_export.toml  cancel_reading_assistant_stream.toml  choose_custom_data_directory.toml  choose_custom_export_directory.toml  choose_local_book_file.toml  clear_ai_output_cache.toml  clear_local_cache.toml  clear_reading_assistant_history.toml  delete_reading_assistant_thread.toml  export_book_decision_markdown.toml  export_book_notes_markdown.toml  export_book_notes_summaries_markdown.toml  export_book_notes_summary_markdown.toml  export_bulk_notes.toml  export_local_data_backup.toml  export_reading_route_markdown.toml  export_reading_stats_review_markdown.toml  export_report_image.toml  get_ai_asset_detail.toml  get_ai_asset_version_detail.toml  get_ai_asset_version_history.toml  get_ai_cached_output.toml  get_ai_review_feedback.toml  get_ai_settings_state.toml  get_best_bookmarks.toml  get_book_detail.toml  get_book_notes.toml  get_bookshelf.toml  get_credential_status.toml  get_latest_book_decision.toml  get_latest_book_notes_summary.toml  get_latest_reading_route.toml  get_latest_reading_stats_review.toml  get_local_book.toml  get_local_book_text.toml  get_local_reading_progress.toml  get_notebook_overview.toml  (+46 more)
src-tauri/plugins/tauri-plugin-image-artifact-mobile/: .gitignore  Cargo.toml  build.rs
src-tauri/plugins/tauri-plugin-image-artifact-mobile/android/: build.gradle.kts
src-tauri/plugins/tauri-plugin-image-artifact-mobile/ios/: Package.swift
src-tauri/plugins/tauri-plugin-image-artifact-mobile/ios/Sources/: ImageArtifactMobilePlugin.swift
src-tauri/plugins/tauri-plugin-image-artifact-mobile/permissions/autogenerated/: reference.md
src-tauri/plugins/tauri-plugin-image-artifact-mobile/src/: lib.rs
src-tauri/src/: config.rs  db.rs  errors.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  book.rs  credentials.rs  discovery.rs  local_books.rs  mod.rs  notes.rs  reading_state.rs  settings.rs  shelf.rs  stats.rs
src-tauri/src/export/: bulk.rs  markdown.rs  mod.rs
src-tauri/src/mappers/: book.rs  discovery.rs  mod.rs  notes.rs  shelf.rs  stats.rs
src-tauri/src/platform/: stronghold.rs
src-tauri/src/repositories/: cache.rs  mod.rs  sync_state.rs
src-tauri/src/services/: ai.rs  book.rs  credentials.rs  discovery.rs  local_books.rs  mod.rs  notes.rs  reading_state.rs  settings.rs  shelf.rs  stats.rs  sync_timing.rs  weread_gateway.rs
(+346 files in other folders)
