[package]
name = "personal-reading-app"
version = "0.1.0"
description = "A local-first personal reading manager for WeRead users"
authors = ["RHZ"]
edition = "2021"
rust-version = "1.77"
default-run = "personal-reading-app"

[lib]
name = "personal_reading_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "personal-reading-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
iota_stronghold = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
tauri-plugin-updater = "2"

[profile.dev.package.scrypt]
opt-level = 3
