[package]
name = "personal-reading-app"
version = "1.0.8"
description = "A local-first personal reading manager for WeRead users"
authors = ["RHZ"]
edition = "2021"
rust-version = "1.77"
default-run = "personal-reading-app"

[lib]
name = "personal_reading_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "personal-reading-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["clock"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "socks", "system-proxy"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
zip = "4.6.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
iota_stronghold = "2"
tauri-plugin-stronghold = { version = "2", features = ["kdf"] }
tauri-plugin-updater = "2"

[profile.dev.package.scrypt]
opt-level = 3
