[package]
name = "tauri-plugin-image-artifact-mobile"
version = "0.1.0"
authors = ["RHZ"]
edition = "2021"
build = "build.rs"
links = "tauri-plugin-image-artifact-mobile"
description = "Native mobile image artifact album and share bridge."
license = "MIT OR Apache-2.0"

[lib]
name = "tauri_plugin_image_artifact_mobile"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10", default-features = false }
thiserror = "2"

[build-dependencies]
plist = "1"
tauri-plugin = { version = "2.5", features = ["build"] }
